<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Car Shop</string>
    <string name="shop_title">Shop</string>
    <string name="payment_title">Payment</string>
    <string name="contact_info">Contact Information</string>
    <string name="phone_number">+91987654321</string>
    <string name="email">gmail@example.com</string>
    <string name="item_title">Item</string>
    <string name="discount_label">5%% Discount</string>
    <string name="shipping_options">Shipping Options</string>
    <string name="standard">Standard</string>
    <string name="express">Express</string>
    <string name="free">FREE</string>
    <string name="express_price">$1,700</string>
    <string name="pay">Pay</string>
    <string name="done_title">Done!</string>
    <string name="done_message">You card has been successfully charged</string>
    <string name="go_to_first_page">Go To First Page</string>
    <string name="total_label">Total</string>
</resources>
